Adds a new API to retrieve current logged in user
